# Principles_and_Practice_Using_Cpp

./: .gitignore  README.md
Chapter02/Exercises/: exercise_10.cpp  exercise_2.cpp  exercise_8.cpp
Chapter02/Headers/: headers.h
Chapter03/Drill/: drill.cpp
Chapter03/Exercises/: exercise_11.cpp  exercise_12_13_14.cpp  exercise_15_16.cpp  exercise_17.cpp  exercise_3.cpp  exercise_5.cpp  exercise_7.cpp  exercise_9_10.cpp
Chapter03/Try_This/: bleeping_vector.cpp  currency.cpp  square_function.cpp
Chapter04/Exercises/: exercise_11.cpp  exercise_12_13.cpp  exercise_2_3_4_5.cpp  exercise_6.cpp  exercise_7.cpp  exercise_8_9_10.cpp
Chapter04/Headers/: headers.h
Chapter04/Try_This/: ct_errors.cpp
Chapter05/Exercises/Exercise5/: exercise_5.cpp
Chapter05/Exercises/Exercise8/: exercise_8.cpp
Chapter05/Headers/: headers.h
Chapter06/: README.md
Chapter06/Drill/: token_calculator.cpp
Chapter06/Drill/Global/: global.cpp
Chapter06/Drill/Symbol_Table/: symbol_table.h
Chapter06/Try_This/: README.md  token_calculator.cpp
Chapter06/Try_This/Global/: global.h
Chapter06/Try_This/Token/: token.cpp
Chapter06/Try_This/Token_Stream/: token_stream.h
Chapter06/Try_This/Variable/: variable.cpp  variable.h
Chapter07/Drill/drill_1/: main.cpp
Chapter07/Drill/drill_3/: foo.cpp  foo.cppm
Chapter07/Exercises/Exercise_10/: main.cpp
Chapter07/Exercises/Exercise_2/: main.cpp
Chapter07/Exercises/Exercise_4/: main.cpp
Chapter07/Exercises/Exercise_8/: main.cpp
Chapter07/Exercises/Exercise_9/: main.cpp
Chapter07/Try_This/: main.cpp  mina.cxx
Chapter08/Exercises/Exercise_1/: README.md
Chapter08/Exercises/Exercise_14_to_18/: README.md
Chapter08/Exercises/Exercise_5_to_12/: README.md
Chapter09/Drill/: test_output.cpp
Chapter09/Drill/models/: entity.h  pch.h  point.cpp  point.h
Chapter09/Exercises/Exercise02/: file.txt
Chapter09/Exercises/Exercise09/: main.cpp
Chapter09/Exercises/Exercise10/: main.cpp
Chapter09/Exercises/Exercise12/: main.cpp
Chapter09/Exercises/Exercise13/: main.cpp  test_file.txt
Chapter09/Exercises/Exercise14/: main.cpp
Chapter09/Exercises/Exercise15/: main.cpp
Chapter09/Exercises/Exercise16/: main.cpp
Chapter09/Exercises/Exercise17/: raw_temps.txt
Chapter09/Exercises/Exercise18/: raw_temps.txt
Chapter09/Exercises/Exercise19/: temp_stats.cpp
Chapter09/Exercises/Exercise20/: README.md  main.cpp
Chapter09/Exercises/Exercise22/: main.cpp
Chapter09/Exercises/Exercise23/: input2.txt
Chapter09/Exercises/Exercise24/: main.cpp
Chapter09/Try_This/: main.cpp
Chapter10/: README.md
Chapter10/Drill/: CMakeLists.txt  README.md  main.cpp
Chapter10/Drill/gui/main_window/: main_window.cpp  main_window.h
Chapter10/Drill/pch/: pch.h
Chapter10/Exercises/Exercise03/: main.cpp
Chapter10/Exercises/Exercise05/: CMakeLists.txt
Chapter10/Exercises/Exercise06/: main.cpp
Chapter10/Exercises/Exercise07/: CMakeLists.txt  README.md  main.cpp
Chapter10/Exercises/Exercise08/: CMakeLists.txt  main.cpp
Chapter10/Exercises/Exercise08/models/circle_data/: circle_data.cpp  circle_data.h
Chapter10/Exercises/Exercise08/pch/: pch.h
Chapter10/Exercises/Exercise08/window/: CMakeLists.txt  window.cpp  window.h
Chapter10/Exercises/Exercise09/: CMakeLists.txt  main.cpp
Chapter10/Exercises/Exercise09/pch/: pch.h
Chapter10/Exercises/Exercise09/windows/: CMakeLists.txt
Chapter10/Exercises/Exercise09/windows/main_window/: main_window.cpp  main_window.h
Chapter10/Exercises/Exercise10/: CMakeLists.txt  main.cpp
Chapter10/Exercises/Exercise10/models/: CMakeLists.txt
Chapter10/Exercises/Exercise10/models/arrow_pointer/: arrow_pointer.cpp  arrow_pointer.h
Chapter10/Exercises/Exercise10/models/data_block/: data_block.cpp  data_block.h
Chapter10/Exercises/Exercise10/models/data_frames/: data_frames.cpp  data_frames.h
Chapter10/Exercises/Exercise10/models/frames_content/: frames_content.cpp  frames_content.h
Chapter10/Exercises/Exercise10/models/show_data/: CMakeLists.txt  show_data.cpp  show_data.h
Chapter10/Exercises/Exercise10/pch/: data_pch.h  pch.h  show_data_pch.h  widget_pch.h
Chapter10/Exercises/Exercise10/widgets/: CMakeLists.txt
Chapter10/Exercises/Exercise10/widgets/main_widget/: main_widget.cpp  main_widget.h
Chapter10/Try_This/: main.cpp
Chapter2/Drill/: drill.cpp
Chapter2/Exercises/: exercise_11.cpp  exercise_4_to_5.cpp  exercise_6_to_7.cpp  exercise_9.cpp
Chapter3/Exercises/: exercise_18_19_20.cpp  exercise_2.cpp  exercise_4.cpp  exercise_6_and_8.cpp
Chapter3/Headers/: headers.h
Chapter3/Try_This/: while_loop.cpp
Chapter4/Drill/: drill.cpp
Chapter4/Exercises/: exercise_14.cpp
Chapter4/Try_This/: error_reporting.cpp
Chapter5/Drill/: faulty_calculator.cpp
Chapter5/Exercises/Exercise2_3/: exercise_2_3.cpp
Chapter5/Exercises/Exercise4/: exercise_4.cpp
Chapter5/Exercises/Exercise6/: exercise_6.cpp
Chapter5/Exercises/Exercise7/: exercise_7.cpp
Chapter5/Try_This/: token_calculator.cpp
Chapter6/Drill/: headers.h  token_calculator.cpp
Chapter6/Drill/Definitions/: definitions.h
Chapter6/Drill/Functions/: functions.cpp  functions.h
Chapter6/Drill/Global/: global.cpp  global.h
Chapter6/Drill/Token/: token.cpp  (+1 more)
Chapter6/Try_This/: headers.h  token_calculator.cpp
Chapter9/Drill/: mydata.txt
(+301 files in other folders)
